<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:gravity="center">

    <Button
            android:text="@string/show_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_centerVertical="true"
            android:id="@+id/openFile"/>
    <Button
            android:text="@string/refactor_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_below="@+id/openFile"
            android:layout_marginTop="20dp"
            android:id="@+id/refactorFile"/>
    <Button
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_below="@+id/refactorFile"
            android:layout_marginTop="20dp"
            android:id="@+id/settingsOpen"/>
</RelativeLayout>